Optimize the player's active point to fix the shift

--- a/css/custom.css
+++ b/css/custom.css
@@ -86,12 +86,12 @@ ion-icon {
 }
 
 .current-point {
-    display: none;
+    opacity: 0;
     height: 16px;
 }
 
 .current-point.active {
-    display: inline-block;
+    opacity: 1;
 }
 
 #dice img {
